@@ -1,3 +1,6 @@
+2020-01-31
+- Remove old legacy records
+
 2020-01-29
 - Major code rearrangement in order to prepare for futur versions of nfdump
   Move extension definitions into extension files nfx.h
